--- a/Rubik.html
+++ b/Rubik.html
@@ -46,6 +46,10 @@
 	<script type="text/javascript" src="src/Rubik.js"></script>
 	</head>
 	<body>
+        <a href="https://github.com/foo123/Rubik3">
+        <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub">
+        </a>
+        
 		<div style="color:#fff;position:absolute;top:5px;left:300px;">
 		Original Code: <a href="http://nikos-web-development.netai.net/">Nikos M.</a>
 		</div>
